[package]
name = "taos-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
pca9685 = "0.1.0"
mpu9250 = { version = "0.24.1", features = ["i2c"] }
linux-embedded-hal = "0.3.2"

